# school_projects

./: README.md  du2.py  du6a.py  du6b.py
2018-hw01-sudoku-master/: .gitignore  README.md  pom.xml  xorg.conf
2018-hw01-sudoku-master/src/main/java/cz/muni/fi/pb162/hw01/: Cell.java  Demo.java  InfiniteCellSequence.java  Sudoku.java
2018-hw01-sudoku-master/src/main/java/cz/muni/fi/pb162/hw01/helper/: ArrayUtils.java  Formatter.java  SudokuChecker.java  SudokuSample.java
2018-hw01-sudoku-master/src/main/java/cz/muni/fi/pb162/hw01/impl/: BasicSudoku.java  DiagonalSudoku.java  DiagonalSudokuChecker.java  LetterCell.java  NumberCell.java  SudokuBuilder.java  SudokuCheckerWrapper.java
2018-hw01-sudoku-master/src/test/java/cz/muni/fi/pb162/hw01/impl/: BasicSudokuTest.java  DiagonalSudokuTest.java  SudokuBuilderTest.java
2018-hw01-sudoku-master/src/test/java/cz/muni/fi/pb162/hw01/impl/cell/: LetterCellTest.java  NumberCellTest.java
2018-hw02-magic-master/: .gitignore  README.md  pb162_codestyle.xml  pom.xml
2018-hw02-magic-master/src/main/java/magicthegathering/: MagicTheGathering.java
2018-hw02-magic-master/src/main/java/magicthegathering/game/: Card.java  CreatureCard.java  Game.java  Generator.java  LandCard.java  LandCardType.java  ManaType.java  Player.java
2018-hw02-magic-master/src/main/java/magicthegathering/impl/: AbstractCard.java  CardImpl.java  CreatureCardImpl.java  GameImpl.java  LandCardImpl.java  PlayerImpl.java
2018-hw02-magic-master/src/test/java/magicthegathering/impl/: CreatureCardImplTest.java  GameImplIntegrationTest.java  LandCardImplTest.java  PlayerImplTest.java
hw01/: CMakeLists.txt  adoption.h  animal.h  handler.cpp  handler.h  main.cpp  person.h  zoo.cpp  zoo.h
hw02/: CMakeLists.txt  config.c  config.cpp  config.h  config.hpp  main.c  main.cpp  test-student.cpp
hw04/: CMakeLists.txt  main.cpp  test_student.cpp  trie.h
python_scripts/: du3.py  du4.py
