cmake_minimum_required(VERSION 3.1)
project(hw01)

# Configure compiler warnings
if (CMAKE_CXX_COMPILER_ID MATCHES Clang OR ${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
  # using regular Clang or AppleClang or GCC
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra -pedantic")
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
  # using Visual Studio C++
  set(CMAKE_CXX_FLAGS "/permissive- /W4 /EHsc")
  add_definitions("-D_CRT_SECURE_NO_WARNINGS")
endif()

set(SOURCES zoo.cpp handler.cpp zoo.cpp adoption.h handler.h person.h zoo.h handler.cpp)
add_executable(hw01_main main.cpp ${SOURCES} zoo.cpp adoption.h animal.h handler.h person.h zoo.h handler.cpp)

file(GLOB TEST_SOURCES test*.cpp)
add_executable(hw01_tests ${TEST_SOURCES} ${SOURCES} zoo.cpp adoption.h handler.h person.h zoo.h handler.cpp)
